biscuit-terminal/lib/tests/snapshots/layout_matrix__Table__max_width_40.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
┌──────┬───────────────────────────────┐
│ Name │ Score                         │
├──────┼───────────────────────────────┤
│ Ann  │ 42                            │
│ Bob  │ 17                            │
└──────┴───────────────────────────────┘
---
VIA_TREE_DIRECT
┌──────┬───────────────────────────────┐
│ Name │ Score                         │
├──────┼───────────────────────────────┤
│ Ann  │ 42                            │
│ Bob  │ 17                            │
└──────┴───────────────────────────────┘
