biscuit-terminal/lib/tests/snapshots/layout_matrix__Table__top_margin_2.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
┌──────┬───────┐
│ Name │ Score │
├──────┼───────┤
│ Ann  │ 42    │
│ Bob  │ 17    │
└──────┴───────┘
---
TREE


┌──────┬───────┐
│ Name │ Score │
├──────┼───────┤
│ Ann  │ 42    │
│ Bob  │ 17    │
└──────┴───────┘
