biscuit-terminal/lib/tests/snapshots/layout_matrix__Table__width_120.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
┌──────┬───────┐
│ Name │ Score │
├──────┼───────┤
│ Ann  │ 42    │
│ Bob  │ 17    │
└──────┴───────┘
---
TREE
┌──────┬───────┐
│ Name │ Score │
├──────┼───────┤
│ Ann  │ 42    │
│ Bob  │ 17    │
└──────┴───────┘
